--- a/i18n/pt.json
+++ b/i18n/pt.json
@@ -9,7 +9,7 @@
   "cta_diag": "Agendar Diagnóstico",
   "services_title": "Nossos Serviços",
   "service_contracts_h": "Contratos Empresariais",
-  "service_contracts_p": "Blindagem, risco e estratégia reunidos em instrumentos contratuais personalizados.",
+  "service_contracts_p": "Proteção jurídica, gestão de riscos e estratégia em instrumentos contratuais personalizados.",
   "service_succession_h": "Planejamento Sucessório",
   "service_succession_p": "Organização patrimonial e sucessão harmônica com foco na perenidade familiar.",
   "service_governance_h": "Governança Familiar",
