--- a/i18n/en.json
+++ b/i18n/en.json
@@ -9,7 +9,7 @@
   "cta_diag": "Schedule a Consultation",
   "services_title": "Our Services",
   "service_contracts_h": "Corporate Contracts",
-  "service_contracts_p": "Shielding, risk and strategy combined in customized agreements.",
+  "service_contracts_p": "Legal protection, risk management and strategy in customized agreements.",
   "service_succession_h": "Succession Planning",
   "service_succession_p": "Asset organization and harmonious succession focused on family longevity.",
   "service_governance_h": "Family Governance",
