--- a/i18n/pt.json
+++ b/i18n/pt.json
@@ -1,27 +1,28 @@
 {
-  "title": "MA – Inteligência Jurídica",
+  "title": "MA – Inteligência Jurídica | Contratos, Sucessão e Governança Familiar",
   "menu_services": "Serviços",
   "menu_method": "Metodologia",
   "menu_about": "Quem Somos",
   "menu_contact": "Contato",
+  "menu_blog": "Blog",
   "hero_title": "Inteligência Jurídica com Propósito",
   "hero_sub": "Transformamos conhecimento jurídico em estratégias reais para empresas e famílias empresárias. Técnica, sensibilidade e futuro.",
   "cta_diag": "Agendar Diagnóstico",
-  "services_title": "Nossos Serviços",
+  "service_title": "Por que escolher a MA – Inteligência Jurídica?",
+  "service_intro": "Escolher a MA é investir em estratégia, confiança e longevidade. Cada cliente recebe soluções jurídicas personalizadas, que unem técnica, sensibilidade humana e visão de futuro.\nTransformamos desafios em segurança, legado e harmonia.",
   "service_contracts_h": "Contratos Empresariais",
   "service_contracts_p": "Proteção jurídica, gestão de riscos e estratégia em instrumentos contratuais personalizados.",
   "service_succession_h": "Planejamento Sucessório",
   "service_succession_p": "Organização patrimonial e sucessão harmônica com foco na perenidade familiar.",
   "service_governance_h": "Governança Familiar",
   "service_governance_p": "Estruturação de acordos, protocolos e governança intergeracional.",
-  "method_title": "Nossa Metodologia",
-  "method_text": "Aplicamos a lógica da Base Viva...",
+  "method_title": "Muito além de um serviço jurídico",
+  "method_text": "Direito com propósito, não rotina.\nNa MA – Inteligência Jurídica, não vendemos tempo ou pareceres padronizados. Oferecemos presença estratégica, linguagem precisa e visão de longo prazo. Cada contrato é uma semente de futuro. Cada família empresária, um legado em construção. Atendemos com a firmeza de quem conhece a Lei e a leveza de quem compreende o humano.\n\nUma advocacia que protege, estrutura e conduz. Com alma.",
   "about_title": "Quem Somos",
-  "about_text": "A MA nasceu para romper com a advocacia genérica...",
+  "about_text": "Na MA – Inteligência Jurídica, cada cliente é o centro de uma estratégia única. Nascemos para ir além da advocacia genérica: somos arquitetos de soluções jurídicas sob medida, guiados por princípios sólidos e visão de futuro.\n\nUnimos técnica apurada, sensibilidade humana e inteligência artificial de última geração para proteger o que importa: seus negócios, seu patrimônio e seu legado. Aqui, cada contrato é um pacto de confiança, cada conselho nasce da experiência e cada ação reflete a paixão pelo direito.",
   "contact_title": "Fale Conosco",
   "contact_name": "Seu nome",
   "contact_email": "Seu e-mail",
   "contact_msg": "Sua mensagem",
   "contact_send": "Enviar"
-  "menu_blog": "Blog"
 }
