--- a/i18n/en.json
+++ b/i18n/en.json
@@ -1,24 +1,25 @@
 {
-  "title": "MA – Legal Intelligence",
+  "title": "MA – Legal Intelligence | Contracts, Succession and Family Governance",
   "menu_services": "Services",
   "menu_method": "Methodology",
   "menu_about": "About Us",
   "menu_contact": "Contact",
   "menu_blog": "Blog",
   "hero_title": "Legal Intelligence with Purpose",
-  "hero_sub": "We turn legal knowledge into real strategies for companies and business families. Technique, sensitivity and future.",
+  "hero_sub": "We turn legal knowledge into real strategies for companies and business families. Technique, sensitivity and vision for the future.",
   "cta_diag": "Schedule a Consultation",
-  "services_title": "Our Services",
+  "service_title": "Why choose MA – Legal Intelligence?",
+  "service_intro": "Choosing MA means investing in strategy, trust and longevity. Each client receives tailored legal solutions, blending expertise, human sensitivity and a vision for the future.\nWe transform challenges into security, legacy and harmony.",
   "service_contracts_h": "Corporate Contracts",
   "service_contracts_p": "Legal protection, risk management and strategy in customized agreements.",
   "service_succession_h": "Succession Planning",
   "service_succession_p": "Asset organization and harmonious succession focused on family longevity.",
   "service_governance_h": "Family Governance",
   "service_governance_p": "Structuring agreements, protocols and inter-generational governance.",
-  "method_title": "Our Methodology",
-  "method_text": "We apply the Living Base logic...",
+  "method_title": "Much more than a legal service",
+  "method_text": "Law with purpose, not routine.\nAt MA – Legal Intelligence, we do not sell time or standardized legal opinions. We offer strategic presence, precise language and long-term vision. Each contract is a seed for the future. Each business family, a legacy in progress. We serve with the firmness of those who know the Law and the empathy of those who understand people.\n\nLegal services that protect, structure and guide. With soul.",
   "about_title": "About Us",
-  "about_text": "MA was born to break with generic law practice...",
+  "about_text": "At MA – Legal Intelligence, each client is at the center of a unique strategy. We were born to go beyond generic law practice: we are architects of tailor-made legal solutions, guided by strong principles and future vision.\n\nWe unite deep expertise, human sensibility and cutting-edge AI to protect what matters most: your business, your assets and your legacy. Here, every contract is a pact of trust, every advice is born from experience, and every action reflects our passion for the law.",
   "contact_title": "Get in Touch",
   "contact_name": "Your name",
   "contact_email": "Your e-mail",
